--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
@@ -30,5 +31,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "eslint": "^7.0.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
